@@ -14,6 +14,7 @@ Dependencies
 For the GConf module you need GConf2-2.8.1-2 and gnome-python2-2.6.0-5
 from rawhide.
 You also need libxml2-python for XML parsing.
+And the very recent gamin-python bindings for file monitoring
 
 You'll also need to put
 
