@@ -1,3 +1,8 @@
+Fri Jan 28 11:20:03 CET 2005 Daniel Veillard <veillard@redhat.com>
+
+	* README lib/dirmonitor.py: switching to using gamin directly
+	  for the directory watches.
+
 2005-01-27  Mark McLoughlin  <mark@skynet.ie>
 
 	* lib/protosession.py: checkpoint of the session
